# tres_mosqueteros

./: .gitignore  README.md
Hardware I || Challenge 1/: README.md
ML_Toolpath_Generation/: requirements.txt  setup.sh
ML_Toolpath_Generation/Toolpath_Clustering/: main_plan_ABC.py  main_plan_v2.py
ML_Toolpath_Generation/Toolpath_RL_1and2/: progress_tracker.py  rl_toolpath_optimizer.py  rl_toolpath_optimizer_zonal_memory.py  rl_toolpath_optimizer_zonal_memory_1.2.py
ML_Toolpath_Generation/Toolpath_RL_Zonal_Q-agent/: main_train.py
hardware_challenges/: README.md  joystick_LED.ino
motion_tracking_device/arduino_sketches/: gyro_setup.ino
rock_navigator/: Dockerfile  README.markdown  setup.sh
rock_navigator/other/: test_rock_generator.py
rock_navigator/scripts/: rock_navigator.py  test_rock_server.py
tool_tracker/: README.md  tool_tracker.ino
toolpath_turtle/: README.markdown
toolpath_turtle/csv_turtle/: CMakeLists.txt  package.xml
toolpath_turtle/csv_turtle/Toolpath_clustering/: main_plan_v2_gr.py
toolpath_turtle/csv_turtle/Toolpath_clustering/SSL/: run_generate_letters.py  visualize_clusters_on_letter.py
toolpath_turtle/csv_turtle/Toolpath_clustering/SSL/letter_dataset/: X_points.npy
toolpath_turtle/csv_turtle/Toolpath_clustering/planners_v2/: zone_order_v2_1.py
toolpath_turtle/csv_turtle/Toolpath_clustering/utils/: geometry_utils_gr.py  visualizer_gr.py
toolpath_turtle/csv_turtle/scripts/: csv_turtle.py  turtle_plan_bridge.py
toolpath_turtle/docker/: Dockerfile
tracker_python/2pt2color_tracker/: multi3.py  (+1 more)
ur-perception/: README.md
(+68 files in other folders)
